--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/peytonCK/microblog#readme",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.15.3"
   }
 }
