--- a/package.json
+++ b/package.json
@@ -21,7 +21,14 @@
   },
   "homepage": "https://github.com/peytonCK/microblog#readme",
   "dependencies": {
+    "body-parser": "^1.17.2",
+    "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "express-session": "^1.15.5",
+    "mongodb": "^2.2.30",
+    "multer": "^1.3.0",
+    "session-file-store": "^1.1.1"
   }
 }
